# proyectDoom

./: CMakeLists.txt  main.cpp  myWorld.txt
